--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<!--- ICS2O My temperature checker --->
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="My template" />
+  <meta name="keywords" content="mths, ics2o" />
+  <meta name="author" content="Janet Do" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="canonical"
+    href="https://github.com/janet-do/ICS2O-Unit-6-02-janet-do?organization=janet-do&organization=janet-do/" />
+  <link rel="manifest" href="/ICS2O-Unit-6-02-janet-do/manifest.webmanifest" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-amber.min.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
+  <title>My Template</title>
+</head>
+<title>Current temperature checker</title>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Current temperature checker</span>
+      </div>
+    </header>
+    <h4>Check the weather and prepare your outfits</h4>
+    <main class="mdl-layout__content">
+      <div id="theImage"></div>
+      <div id="theTemp"></div>
+    </main>
+  </div>
+</body>
 </html>
