--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
   <title>My Template</title>
 </head>
-<title>Current temperature checker</title>
+<title>Weather checker</title>
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="./js/script.js"></script>
